# gitglimpse

./: .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  PYPI_README.md  README.md  ROADMAP.md  pyproject.toml
.claude/commands/: pr.md  report.md  standup.md  week.md
.github/workflows/: pr-context.yml  test.yml
action/: README.md  action.yml
scripts/: integration_test.sh
src/gitglimpse/: __init__.py  cli.py  config.py  estimation.py  git.py  grouping.py  onboarding.py
src/gitglimpse/commands/: __init__.py  changelog.md  pr.md  report.md  standup.md  week.md
src/gitglimpse/formatters/: changelog.py  json.py  markdown.py  pr.py  template.py
src/gitglimpse/providers/: __init__.py  base.py  claude.py  gemini.py  local.py  openai.py
tests/: test_changelog.py  test_cli.py  test_config.py  test_estimation.py  test_git.py  test_grouping.py  test_pr.py
