[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitglimpse"
version = "0.1.0"
description = "Analyze git history and generate standup updates, daily reports, and weekly summaries."
authors = [{ name = "Dino" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["git", "standup", "developer-tools", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "platformdirs>=4.0",
    "tomli_w>=1.2",
    "InquirerPy>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/dino/gitglimpse"
Repository = "https://github.com/dino/gitglimpse"
"Bug Tracker" = "https://github.com/dino/gitglimpse/issues"

[project.optional-dependencies]
llm = ["httpx>=0.27"]

[project.scripts]
glimpse = "gitglimpse.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitglimpse"]

[tool.hatch.build.targets.wheel.shared-data]
# Ensures .md templates are included in the wheel alongside Python files.

[tool.hatch.build.targets.sdist]
include = ["src/gitglimpse/commands/*.md"]
